crates/djls-project/tests/snapshots/corpus__repos__netbox__netbox__utilities__templatetags__buttons.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "tag::action_buttons":
    kind: tag
    has_doc: false
  "tag::add_button":
    kind: tag
    has_doc: false
  "tag::bookmark_button":
    kind: tag
    has_doc: false
  "tag::bulk_delete_button":
    kind: tag
    has_doc: false
  "tag::bulk_edit_button":
    kind: tag
    has_doc: false
  "tag::clone_button":
    kind: tag
    has_doc: false
  "tag::delete_button":
    kind: tag
    has_doc: false
  "tag::edit_button":
    kind: tag
    has_doc: false
  "tag::export_button":
    kind: tag
    has_doc: false
  "tag::import_button":
    kind: tag
    has_doc: false
  "tag::subscribe_button":
    kind: tag
    has_doc: false
  "tag::sync_button":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "utilities.templatetags.buttons::tag::action_buttons":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: actions
            requirement: required
            kind: Variable
          - name: obj
            requirement: required
            kind: Variable
          - name: multi
            requirement: optional
            kind: Variable
        positional_only: 0
        variadic_keyword: kwargs
    as_var: strip
  "utilities.templatetags.buttons::tag::add_button":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: model
            requirement: required
            kind: Variable
          - name: action
            requirement: optional
            kind: Variable
          - name: return_url
            requirement: optional
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
  "utilities.templatetags.buttons::tag::bookmark_button":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: instance
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
  "utilities.templatetags.buttons::tag::bulk_delete_button":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: model
            requirement: required
            kind: Variable
          - name: action
            requirement: optional
            kind: Variable
          - name: query_params
            requirement: optional
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
  "utilities.templatetags.buttons::tag::bulk_edit_button":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: model
            requirement: required
            kind: Variable
          - name: action
            requirement: optional
            kind: Variable
          - name: query_params
            requirement: optional
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
  "utilities.templatetags.buttons::tag::clone_button":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: instance
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
  "utilities.templatetags.buttons::tag::delete_button":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: instance
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
  "utilities.templatetags.buttons::tag::edit_button":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: instance
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
  "utilities.templatetags.buttons::tag::export_button":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: model
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
  "utilities.templatetags.buttons::tag::import_button":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: model
            requirement: required
            kind: Variable
          - name: action
            requirement: optional
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
  "utilities.templatetags.buttons::tag::subscribe_button":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: instance
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
  "utilities.templatetags.buttons::tag::sync_button":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: instance
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
filter_arities: {}
block_specs: {}
