crates/djls-project/tests/snapshots/corpus__repos__netbox__netbox__utilities__templatetags__form_helpers.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "filter::getfield":
    kind: filter
    has_doc: false
  "filter::widget_type":
    kind: filter
    has_doc: false
  "tag::render_custom_fields":
    kind: tag
    has_doc: false
  "tag::render_errors":
    kind: tag
    has_doc: false
  "tag::render_field":
    kind: tag
    has_doc: false
  "tag::render_fieldset":
    kind: tag
    has_doc: false
  "tag::render_form":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "utilities.templatetags.form_helpers::tag::render_custom_fields":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: form
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
  "utilities.templatetags.form_helpers::tag::render_errors":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: form
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
  "utilities.templatetags.form_helpers::tag::render_field":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: field
            requirement: required
            kind: Variable
          - name: bulk_nullable
            requirement: optional
            kind: Variable
          - name: label
            requirement: optional
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
  "utilities.templatetags.form_helpers::tag::render_fieldset":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: form
            requirement: required
            kind: Variable
          - name: fieldset
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
  "utilities.templatetags.form_helpers::tag::render_form":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: form
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
filter_arities:
  "utilities.templatetags.form_helpers::filter::getfield": required_argument
  "utilities.templatetags.form_helpers::filter::widget_type": no_argument
block_specs: {}
