crates/djls-project/tests/snapshots/corpus__repos__netbox__netbox__utilities__templatetags__helpers.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "filter::as_range":
    kind: filter
    has_doc: false
  "filter::divide":
    kind: filter
    has_doc: false
  "filter::get_item":
    kind: filter
    has_doc: false
  "filter::get_key":
    kind: filter
    has_doc: false
  "filter::humanize_disk_megabytes":
    kind: filter
    has_doc: false
  "filter::humanize_ram_megabytes":
    kind: filter
    has_doc: false
  "filter::humanize_speed":
    kind: filter
    has_doc: false
  "filter::icon_from_status":
    kind: filter
    has_doc: false
  "filter::kg_to_pounds":
    kind: filter
    has_doc: false
  "filter::meters_to_feet":
    kind: filter
    has_doc: false
  "filter::percentage":
    kind: filter
    has_doc: false
  "filter::startswith":
    kind: filter
    has_doc: false
  "filter::status_from_tag":
    kind: filter
    has_doc: false
  "filter::validated_viewname":
    kind: filter
    has_doc: false
  "filter::viewname":
    kind: filter
    has_doc: false
  "tag::action_url":
    kind: tag
    has_doc: false
  "tag::applied_filters":
    kind: tag
    has_doc: false
  "tag::querystring":
    kind: tag
    has_doc: false
  "tag::table_config_form":
    kind: tag
    has_doc: false
  "tag::utilization_graph":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "utilities.templatetags.helpers::tag::action_url":
    arg_constraints:
      - Min: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters:
        - name: arg1
          requirement: required
          kind: Variable
        - name: arg2
          requirement: required
          kind: Variable
    as_var: strip
  "utilities.templatetags.helpers::tag::applied_filters":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: model
            requirement: required
            kind: Variable
          - name: form
            requirement: required
            kind: Variable
          - name: query_params
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
  "utilities.templatetags.helpers::tag::querystring":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: request
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: kwargs
    as_var: strip
  "utilities.templatetags.helpers::tag::table_config_form":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: table
            requirement: required
            kind: Variable
          - name: table_name
            requirement: optional
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
  "utilities.templatetags.helpers::tag::utilization_graph":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: utilization
            requirement: required
            kind: Variable
          - name: warning_threshold
            requirement: optional
            kind: Variable
          - name: danger_threshold
            requirement: optional
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
filter_arities:
  "utilities.templatetags.helpers::filter::as_range": no_argument
  "utilities.templatetags.helpers::filter::divide": required_argument
  "utilities.templatetags.helpers::filter::get_item": required_argument
  "utilities.templatetags.helpers::filter::get_key": required_argument
  "utilities.templatetags.helpers::filter::humanize_disk_megabytes": no_argument
  "utilities.templatetags.helpers::filter::humanize_ram_megabytes": no_argument
  "utilities.templatetags.helpers::filter::humanize_speed": no_argument
  "utilities.templatetags.helpers::filter::icon_from_status": no_argument
  "utilities.templatetags.helpers::filter::kg_to_pounds": no_argument
  "utilities.templatetags.helpers::filter::meters_to_feet": no_argument
  "utilities.templatetags.helpers::filter::percentage": required_argument
  "utilities.templatetags.helpers::filter::startswith": required_argument
  "utilities.templatetags.helpers::filter::status_from_tag": no_argument
  "utilities.templatetags.helpers::filter::validated_viewname": required_argument
  "utilities.templatetags.helpers::filter::viewname": required_argument
block_specs: {}
