crates/djls-project/tests/snapshots/corpus__repos__netbox__netbox__utilities__templatetags__navigation.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "tag::nav":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "utilities.templatetags.navigation::tag::nav":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters: []
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
filter_arities: {}
block_specs: {}
