crates/djls-project/tests/snapshots/corpus__repos__netbox__netbox__utilities__templatetags__perms.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "filter::can_add":
    kind: filter
    has_doc: false
  "filter::can_change":
    kind: filter
    has_doc: false
  "filter::can_delete":
    kind: filter
    has_doc: false
  "filter::can_run":
    kind: filter
    has_doc: false
  "filter::can_sync":
    kind: filter
    has_doc: false
  "filter::can_view":
    kind: filter
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities:
  "utilities.templatetags.perms::filter::can_add": required_argument
  "utilities.templatetags.perms::filter::can_change": required_argument
  "utilities.templatetags.perms::filter::can_delete": required_argument
  "utilities.templatetags.perms::filter::can_run": required_argument
  "utilities.templatetags.perms::filter::can_sync": required_argument
  "utilities.templatetags.perms::filter::can_view": required_argument
block_specs: {}
