crates/djls-project/tests/snapshots/corpus__repos__netbox__netbox__utilities__templatetags__plugins.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "tag::plugin_alerts":
    kind: tag
    has_doc: false
  "tag::plugin_buttons":
    kind: tag
    has_doc: false
  "tag::plugin_full_width_page":
    kind: tag
    has_doc: false
  "tag::plugin_head":
    kind: tag
    has_doc: false
  "tag::plugin_left_page":
    kind: tag
    has_doc: false
  "tag::plugin_list_buttons":
    kind: tag
    has_doc: false
  "tag::plugin_navbar":
    kind: tag
    has_doc: false
  "tag::plugin_right_page":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "utilities.templatetags.plugins::tag::plugin_alerts":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: obj
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "utilities.templatetags.plugins::tag::plugin_buttons":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: obj
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "utilities.templatetags.plugins::tag::plugin_full_width_page":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: obj
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "utilities.templatetags.plugins::tag::plugin_head":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters: []
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "utilities.templatetags.plugins::tag::plugin_left_page":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: obj
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "utilities.templatetags.plugins::tag::plugin_list_buttons":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: model
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "utilities.templatetags.plugins::tag::plugin_navbar":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters: []
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "utilities.templatetags.plugins::tag::plugin_right_page":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: obj
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
filter_arities: {}
block_specs: {}
