crates/djls-project/tests/snapshots/corpus__repos__netbox__netbox__utilities__templatetags__tabs.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "tag::model_view_tabs":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "utilities.templatetags.tabs::tag::model_view_tabs":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: instance
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
filter_arities: {}
block_specs: {}
